# spira-rs

./: .gitignore  Cargo.toml  README.md
examples/: driver.rs  list-projects.rs  list_projects.rs
src/: client.rs  lib.rs  project.rs  requirement.rs
src/test_jsons/: requirement.json
