[package]
authors = ["Dominic Grimaldi <dominic.j.grimaldi@gmail.com>"]
description = "Spira Test API bindings for Rust 🦀"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["inflectra", "spira", "client-api"]
license = "MIT OR Apache-2.0"
name = "spira-rs"
repository = "https://github.com/GrimOutlook/spira-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.4", features = ["json"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
serde_with = "3.8.1"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
