[package]
name = "spira-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
log = { version = "0.4.22", default-features = false, optional = true }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
env_logger = "0.11.3"
test-case = "3.3.1"

[features]
log = ["dep:log"]
