[package]
name = "spira-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-getters = "0.4.0"
log = { version = "0.4.22", default-features = false, optional = true }
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
vendor = "0.2.0"
time = { version = "0.3.36", features = ["parsing", "formatting"] }
time-macros = { version = "0.2.18", features = ["parsing", "formatting"] }

[dev-dependencies]
env_logger = "0.11.3"
httpmock = "0.7.0"
test-case = "3.3.1"

[features]
log = ["dep:log"]
